@@ -75,7 +75,8 @@ int8_t RampGenerator::setAcceleration(int32_t accel) {
   }
   acceleration = (uint32_t)accel;
 #ifdef UPM_ACCEL_FACTOR
-  upm_float upm_inv_accel2 = upm_divide(UPM_ACCEL_FACTOR, upm_from((uint32_t)accel));
+  upm_float upm_inv_accel2 =
+      upm_divide(UPM_ACCEL_FACTOR, upm_from((uint32_t)accel));
 #else
   upm_float upm_inv_accel =
       upm_divide(upm_shr(UPM_TICKS_PER_S, 1), upm_from(accel));
@@ -85,8 +86,8 @@ int8_t RampGenerator::setAcceleration(int32_t accel) {
     _config.upm_inv_accel2 = upm_inv_accel2;
 
     // This is A = f / sqrt(2*a) = (f/sqrt(2))*rsqrt(a)
-    _config.upm_sqrt_inv_accel =
-        upm_multiply(upm_rsqrt(upm_from((uint32_t)accel)), UPM_TICKS_PER_S_DIV_SQRT_OF_2);
+    _config.upm_sqrt_inv_accel = upm_multiply(
+        upm_rsqrt(upm_from((uint32_t)accel)), UPM_TICKS_PER_S_DIV_SQRT_OF_2);
     _config.accel_change_cnt = _rw.accel_change_cnt + 1;
   }
   return 0;
