@@ -4,6 +4,7 @@ pre-0.23.0:
 - setAcceleration(uint32_t) changed to setAcceleration(int32_t). Only positive values allowed.
   This way getCurrentAcceleration() can return negative values without range problems
 - add function: getCurrentSpeed()
+- restructure tests
 
 0.22.2:
 - esp32: getCurrentPosition() does take current command's pulse count into consideration
